Ready to display param/keyword attributes; tweaking display of small fonts; printing message when .sav and .idldoc files are parsed.

--- a/idldoc/src/resources/main.css
+++ b/idldoc/src/resources/main.css
@@ -10,7 +10,7 @@ a:hover, a:focus { background: yellow; border-bottom: 1px dotted #303099; }
 /* titles */
 h1, h2, h3, h4 { font-weight:normal; color: #900000; margin-top: 1.5em; }
 .center { margin-left: auto; margin-right: auto; }
-.small { font-size: 90%; }
+.small { font-family: Verdana, Helvetica, sans-serif; font-size: 90%; }
 .smaller { font-family: Verdana, Helvetica, sans-serif; font-size: 80%; }
 .smallest { font-family: Verdana, Helvetica, sans-serif; font-size: 70%; }
 h1.basename { margin-top: 0; }
@@ -18,6 +18,9 @@ h2.directory { font-size: 90%; margin-bottom: 0; }
 
 div.routine-details { border: 1px dotted #C0C0C0; margin-top: 1em; padding: 1em; }
 div.routine-details h3 { margin-top: 0; }
+div.routine-details dt { font-size: 90%; color: #900000; }
+div.routine-details dt span { color: #384806; margin-left: 3em; }
+div.routine-details dd { font-size: 90%; margin: 0.5em 2em 1em 2em; }
 a.top { font-weight: bold; text-transform: uppercase; float: right; }
 
 /* code styles */
