--- a/idldoc/src/templates/profile.tt
+++ b/idldoc/src/templates/profile.tt
@@ -47,7 +47,7 @@
         <dl class="routine-summary">
           [% FOREACH r IN routines %][% SCOPE r %]
             <dt class="syntax"><a href="#[% name %]"><code>[% IF is_function %]result = [% END %][% name %][% IF is_function %]([% END %][% IF n_parameters gt 0 %][% FOREACH p IN parameters %][% SCOPE p %][% prefix %][% name %][% suffix %][% END %][% END %][% END %][% IF n_keywords gt 0 %][% FOREACH k IN keywords %][% SCOPE k %][% prefix %][% name %]=[% name %][% suffix %][% END %][% END %][% END %][% IF is_function %])[% END %]</code></a></dt>
-            <dd class="smallest">[% comments_first_line %]</dd>
+            <dd class="smaller">[% comments_first_line %]</dd>
           [% END %][% END %]
         </dl>
       [% END %]
@@ -76,7 +76,7 @@
           <h4>Parameters</h4>
             <dl>
             [% FOREACH p IN parameters %][% SCOPE p %]
-              <dt>[% name %]</dt>
+              <dt>[% name %] <span class="small"></span></dt>
               <dd></dd>
             [% END %][% END %]
             </dl>
@@ -86,8 +86,8 @@
           <h4>Keywords</h4>
             <dl>
             [% FOREACH k IN keywords %][% SCOPE k %]
-              <dt>[% name %]</dt>
-              <dd></dd>
+              <dt>[% name %] <span class="small"></span></dt>
+              <dd>Some comment about this keyword.</dd>
             [% END %][% END %]
             </dl>
           [% END %]
