--- a/idldoc/src/resources/main.css
+++ b/idldoc/src/resources/main.css
@@ -1,6 +1,7 @@
 /* setup page */
 body { font-family: Helvetica, sans-serif; font-size: 10pt; margin: 0; padding: 0; }
 div.content { padding: 1em; }
+p { line-height: 1.2; }
 
 /* link styles */
 a { text-decoration: none; }
@@ -13,8 +14,10 @@ h1, h2, h3, h4 { font-weight:normal; color: #900000; margin-top: 1.5em; }
 .small { font-family: Verdana, Helvetica, sans-serif; font-size: 90%; }
 .smaller { font-family: Verdana, Helvetica, sans-serif; font-size: 80%; }
 .smallest { font-family: Verdana, Helvetica, sans-serif; font-size: 70%; }
-h1.basename { margin-top: 0; }
+h1.basename { margin-top: 0; margin-bottom: 0; }
 h2.directory { font-size: 90%; margin-bottom: 0; }
+span.file_attribute { float: right; color: #384806; margin: 0 0 1em 3em; }
+div#file_comments { margin-top: 1em; }
 
 div.routine-details { border: 1px dotted #C0C0C0; margin-top: 1em; padding: 1em; }
 div.routine-details h3 { margin-top: 0; }
