--- a/idldoc/src/templates/profile.tt
+++ b/idldoc/src/templates/profile.tt
@@ -43,7 +43,7 @@
 			
       [% IF has_comments %]
       <div id="file_comments">
-      	<p>[% comments %]</p>
+      	<p [% IF preformat %]class="pre"[% END %]>[% comments %]</p>
       </div>
       [% END %]
       
@@ -71,10 +71,12 @@
           <p class="syntax"><code>[% IF is_function %]result = [% END %][% name %][% IF is_function %]([% END %][% IF n_parameters gt 0 %][% FOREACH p IN parameters %][% SCOPE p %][% prefix %][% name %][% suffix %][% END %][% END %][% END %][% IF n_keywords gt 0 %][% FOREACH k IN keywords %][% SCOPE k %][% prefix %][% name %]=[% name %][% suffix %][% END %][% END %][% END %][% IF is_function %])[% END %]</code></p>
           
           [% IF has_comments %]
-          <p>[% comments %]</p>
+          <p [% IF preformat %]class="pre"[% END %]>[% comments %]</p>
           [% END %]
           
+          [% IF is_function %]
           <h4>Return value</h4>
+          [% END %]
           
           [% IF n_parameters gt 0 %]
           <h4>Parameters</h4>
@@ -96,7 +98,10 @@
             </dl>
           [% END %]
           
+          [% IF statistics %]
           <h4>Statistics</h4>
+          [% END %]
+          
           <h4>Other attributes</h4>
         </div>            
         [% END %][% END %]
