--- a/idldoc/src/templates/dir-overview.tt
+++ b/idldoc/src/templates/dir-overview.tt
@@ -33,17 +33,40 @@
     [% INCLUDE_TEMPLATE idldoc_header_location %]
   
   	<div class="content">
-  		<h1>Directory overview: [% location %]</h1>
+  		<h1>Directory: [% location %]</h1>
   		
-  		[% IF n_pro_files %]
-  		<dl>
-  			[% FOREACH f IN pro_files %][% SCOPE f %]
-  			<dt>[% basename %]</dt>
-  			<dd>File description here.</dd>	
-  			[% END %][% END %]
-  		</dl>
+  		[% IF n_pro_files gt 0 %]
+  		<h3>.pro files</h3>
+  		
+  		  <dl class="file_listing">
+  			 [% FOREACH f IN pro_files %][% SCOPE f %]
+  			 <dt class="filename"><a href="[% local_url %]">[% basename %]</a></dt>
+  			 <dd class="smaller">[% comments_first_line %]</dd>	
+  			 [% END %][% END %]
+  		  </dl>
   		[% END %]
-  		
+
+      [% IF n_sav_files gt 0 %]
+        <h3>.sav files</h3>
+        
+        <dl class="file_listing">
+          [% FOREACH f IN sav_files %][% SCOPE f %]
+          <dt class="filename"><a href="[% local_url %]">[% basename %]</a></dt>
+          <dd class="smaller">[% description %]</dd>  
+          [% END %][% END %]
+        </dl>
+      [% END %]
+
+      [% IF n_idldoc_files gt 0 %]
+      <h3>.idldoc files</h3>
+      
+        <dl class="file_listing">
+          [% FOREACH f IN idldoc_files %][% SCOPE f %]
+          <dt class="filename">[% basename %]</dt>
+          <dd class="smaller"></dd>  
+          [% END %][% END %]
+        </dl>
+      [% END %]        		
   	</div>
   	
     [% INCLUDE_TEMPLATE idldoc_footer_location %]      	
