Inheritance for classes complete.

--- a/idldoc/src/templates/profile.tt
+++ b/idldoc/src/templates/profile.tt
@@ -50,11 +50,18 @@
       
       [% IF n_ancestors gt 0 %]
       <h3>Inheritance</h3>
-      	<ul>
-      		[% FOREACH a IN ancestors %][% SCOPE a %]
-      		<li><a href="[% url %]">[% classname %]</a></li>
-      		[% END %][% END %]
-      	</ul>
+        <h4>Parents</h4>
+        <ul>
+          [% FOREACH p IN parents %]
+          <li>[% IF p->hasUrl() %]<a href="[% relative_root %][% p->getUrl() %]">[% END %][% p->getClassname() %][% IF p->hasUrl() %]</a>[% END %]</li>
+          [% END %]
+        </ul>
+              
+        <p class="smaller">All ancestors:
+      		[% FOREACH a IN ancestors %]
+      		[% IF a->hasUrl() %]<a href="[% relative_root %][% a->getUrl() %]">[% END %][% a->getClassname() %][% IF a->hasUrl() %]</a>[% END %]
+      		[% END %]
+      	</p>
       [% END %]
       
       <h3>Fields</h3>
