Produce output for .idldoc files (just need parsers for full output).

--- a/idldoc/src/templates/overview.tt
+++ b/idldoc/src/templates/overview.tt
@@ -41,7 +41,7 @@
       
       <h2>Attributes</h2>
 
-      <table class="attribute small">
+      <table class="attribute smaller">
         <tr>
           <td class="name">Lines:</td>
           <td>[% n_lines %]</td>
