--- a/idldoc/src/templates/all-files.tt
+++ b/idldoc/src/templates/all-files.tt
@@ -47,7 +47,7 @@
     <h1>.idldoc files &nbsp;&nbsp; <span>[% n_idldoc_files %] files</span></h1>
       <ul>
         [% FOREACH f IN idldoc_files %]
-          <li>[% SCOPE f %][% basename %][% END %]</li>
+          <li>[% SCOPE f %]<a href="[% location %][% local_url %]" target="main_frame">[% basename %]</a>[% END %]</li>
         [% END %]
       </ul>     
     [% END %]
