Made routine details text a bit larger; formatted attribute tables better.

--- a/idldoc/src/templates/overview.tt
+++ b/idldoc/src/templates/overview.tt
@@ -30,7 +30,7 @@
     
     	<h2>Directories</h2>
     	
-      <table class="attribute small">
+      <table class="attribute box small">
         [% FOREACH d IN dirs %][% SCOPE d %]
         <tr>
           <td class="name"><a href="[% url %]dir-overview.html">[% location %]</a></td>
