--- a/idldoc/src/resources/main.css
+++ b/idldoc/src/resources/main.css
@@ -25,7 +25,6 @@ span.file_attribute { float: right; color: #384806; margin: 0 0 1em 3em; }
 div#file_comments { margin-top: 1em; }
 
 div.routine-details { border: 1px dotted #C0C0C0; margin-top: 1em; padding: 1em; }
-div.routine-details h3 { margin-top: 0; }
 div.routine-details dt { color: #900000; margin-left: 2em; }
 div.routine-details dt span { color: #384806; margin-left: 3em; }
 div.routine-details dd { margin: 0.5em 2em 1em 4em; }
@@ -53,13 +52,15 @@ ul li { list-style-type: none; }
 table { empty-cells: show; }
 
 /* An attribute table is a vertical list of name-value pairs. */
-table.attribute { 
+table.box { 
   background: #EFEFEF; 
-  padding: 0.75em; 
   border: 1px #A0A0A0 dotted; 
+  padding-top: 0.75em;
+  padding-bottom: 0.75em; 
 }
-table.attribute td { font-style: italic; }
-table.attribute td.name { font-style: normal; padding-right: 1.5em; }
+table.attribute { padding-left: 0.75em; padding-right: 0.75em; }
+table td { font-style: italic; }
+table td.name { font-style: normal; padding-right: 1.5em; }
 
 /* header/navbar styles */
 div.header { padding: 2em 2em 0 2em; background: #71900B; border-bottom: 2px #384806 solid; }
