Added footer keyword to IDLdoc and added a footer for IDLdoc's documentation.

--- a/idldoc/src/templates/categories.tt
+++ b/idldoc/src/templates/categories.tt
@@ -30,6 +30,7 @@
     
     	<h2>Categories</h2>
     	
+    	[% IF footer ne '' %][% INCLUDE_TEMPLATE footer %][% END %]
     </div>    
 
     [% INCLUDE_TEMPLATE idldoc_footer_location %]
