--- a/idldoc/src/templates/profile.tt
+++ b/idldoc/src/templates/profile.tt
@@ -165,6 +165,7 @@
         </table> 
       </div>
       
+      [% IF footer ne '' %][% INCLUDE_TEMPLATE footer %][% END %]
     </div>
     
     [% INCLUDE_TEMPLATE idldoc_footer_location %]    
