--- a/idldoc/src/templates/idldocfile.tt
+++ b/idldoc/src/templates/idldocfile.tt
@@ -42,6 +42,7 @@
       </div>
       [% END %]
           
+      [% IF footer ne '' %][% INCLUDE_TEMPLATE footer %][% END %]
     </div>
     [% INCLUDE_TEMPLATE idldoc_footer_location %]    
   </body>
