--- a/idldoc/src/templates/index-entries.tt
+++ b/idldoc/src/templates/index-entries.tt
@@ -30,6 +30,7 @@
     
     	<h2>Index</h2>
     	
+    	[% IF footer ne '' %][% INCLUDE_TEMPLATE footer %][% END %]
 		</div>    
 
     [% INCLUDE_TEMPLATE idldoc_footer_location %]
