--- a/idldoc/src/templates/search.tt
+++ b/idldoc/src/templates/search.tt
@@ -30,7 +30,7 @@
     
     	<h2>Search</h2>
  
-    	
+    	[% IF footer ne '' %][% INCLUDE_TEMPLATE footer %][% END %]
     </div>    
 
     [% INCLUDE_TEMPLATE idldoc_footer_location %]
