--- a/idldoc/src/templates/warnings.tt
+++ b/idldoc/src/templates/warnings.tt
@@ -48,6 +48,7 @@
     		<h2>Statistics</h2>
     	</div>
     	
+    	[% IF footer ne '' %][% INCLUDE_TEMPLATE footer %][% END %]
 		</div>    
 
     [% INCLUDE_TEMPLATE idldoc_footer_location %]
